--- a/email/pincode.html
+++ b/email/pincode.html
@@ -38,7 +38,7 @@
           
           <div style="max-width: 35em; padding: 4px; border: 1px dashed #E0E0E0;"> 
             <img src="https://cdn.glitch.com/f356573b-ef61-46b0-b16f-e21f27d6ed05%2Fundraw_mail_box_kd5i.png?v=1571957378288" alt="Illustration" style="width: 20em;">
-            <p style="padding: 0 4em; font-size: 15px;">листочек с вашим пинкодом прилетел именно в ваш почтовый ящик! мы подготовили ваш аккаунт, и для того, что бы в него зайти вам просто стоит или перейти по <a id="acct_link" href="" style="text-decoration: none; color: #FF9800; border-bottom: 1px dotted #FF5722">этой ссылке</a> ну или войти в окне, в котором вы регистрировались.</p>
+            <p style="padding: 0 4em; font-size: 15px;">листочек с вашим пинкодом прилетел именно в ваш почтовый ящик! мы подготовили ваш аккаунт, и для того, что бы в него зайти вам просто стоит перейти по <a id="acct_link" href="https://account.wavees.co.vu/" style="text-decoration: none; color: #FF9800; border-bottom: 1px dotted #FF5722">этой ссылке</a> или войти в окне, в котором вы регистрировались.</p>
           
             <div id="pincode" style="margin-top: 2em; margin-bottom: 3em;">
             </div>
